@@ -56,6 +56,7 @@ MBDyn 1.X-Devel
 		  when modal node is not in CM (noted by Paolo Zaltron)
 		- fix gravity in inverse dynamics (noted by Andrea Zanoni)
 		- fix SIGSEGV when binding to loadable elem (Reinhard Resch)
+		- fix near-zero velocity in asynch. motor (Reinhard Resch)
 
 MBDyn 1.4.0
 	Enhancements:
